--- a/vsem_calibration_tests/Bayes_opt_tests.Rmd
+++ b/vsem_calibration_tests/Bayes_opt_tests.Rmd
@@ -186,6 +186,13 @@ emulator_info_list <- list(gp_fits = gp_fits,
 # Validating lpost predictive variance computation via Monte Carlo. 
 
 # Closed-form computation. 
+test <- predict_lpost_GP_approx(theta_vals_scaled = prior_grid_info$inputs_scaled[2,,drop=FALSE], 
+                                theta_vals_unscaled = prior_grid_info$inputs[2,,drop=FALSE], 
+                                emulator_info_list = emulator_info_list,
+                                sig2_eps = diag(computer_model_data$Sig_eps), 
+                                theta_prior_params = theta_prior_params)
+
+
 lpost_pred_vars_analytic <- predict_lpost_GP_approx(theta_vals_scaled = prior_grid_info$inputs_scaled, 
                                                     theta_vals_unscaled = prior_grid_info$inputs, 
                                                     emulator_info_list = emulator_info_list,
